support for model-less and texture-less avatars